# gilded-rose-python

./: gilded_rose.py  pyproject.toml
tests/: test_aged_brie.py  test_backstage_pass.py  test_gilded_rose.py  test_item.py  test_sulfuras.py
